<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_equipment_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_equipment_item"
    android:padding="6dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleView_equipment_picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_equipment_image_item_list"
        android:src="@drawable/album_icon"
        android:contentDescription="@string/equipment_list_item_circular_image"/>

    <TextView
        android:id="@+id/tv_equipment_brand_list_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/divider"
        tools:text="@string/equipment_brand_content"
        android:textColor="@color/list_item_equipment_brand_text_color"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_equipment_owner_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_equipment_brand_list_info"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/divider"
        android:ellipsize="end"
        android:maxLines="1"
        tools:text="@string/equipment_owner_content"
        android:textColor="@color/list_item_owner_name_text_color"/>

    <LinearLayout
        android:layout_width="38sp"
        android:layout_height="38sp"
        android:layout_alignTop="@+id/tv_equipment_brand_list_info"
        android:layout_alignBottom="@+id/et_equipment_owner_list_item"
        android:layout_toEndOf="@+id/divider"
        android:layout_marginStart="290dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-139dp"
        android:layout_marginBottom="-28dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_equipment_list_status"
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:contentDescription="@string/equipment_list_item_status_icon_image"
            android:padding="3dp"
            android:src="@drawable/icon_list_black_ok" />

        <TextView
            android:id="@+id/text_view_equipment_list_status"
            style="@style/text_list_item_equipment_status"
            android:text="@string/equipment_stolen" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_toEndOf="@+id/circleView_equipment_picture"
        style="@style/dividerVerticalListItem" />

</RelativeLayout>