<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/overbox_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/border_color"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="@dimen/side_padding">

        <!-- Image selection -->
        <FrameLayout
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_camera_picture_upload"
                android:layout_gravity="bottom|end"
                android:clickable="true"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="0dp"
                android:background="@color/menu_transparent"
                android:src="@drawable/ic_camera_picture"
                android:elevation="5dp" />

            <ImageView
                android:id="@+id/imageView_equipment_edit_picture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/album_icon"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_image"
                android:contentDescription="@string/detail_equipment_image_description"
                android:gravity="center_horizontal" />

            <!-- Equipment Image upload progressBar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="5dp">

                <ProgressBar
                    android:id="@+id/progressBar_equipment_edit_upload_picture"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:visibility="gone" />

            </LinearLayout>
            <!-- Equipment Image upload progressBar -->

        </FrameLayout>

        <!-- Equipment serial number label and text -->
        <TextView
            android:id="@+id/tv_equipment_serial_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_serial_number_label"
            android:layout_marginTop="@dimen/detail_label_text_margin_top"
            android:layout_marginEnd="@dimen/detail_side_margin"
            style="@style/TextLabels" />

        <EditText
            android:id="@+id/et_equipment_edit_serial_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_text_margin_left"
            tools:text="@string/equipment_serial_number_content"
            android:textColorHint="@drawable/hint_selector"
            android:layout_marginTop="@dimen/detail_text_margin_top"
            android:singleLine="true"
            android:theme="@style/EditTextStyleWhite"
            android:background="@drawable/text_box_underline_selector"
            style="@style/TextContents" />

        <!-- Equipment brand label and text -->
        <TextView
            android:id="@+id/tv_equipment_brand_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_brand_label"
            android:layout_marginTop="@dimen/detail_side_margin"
            android:layout_marginEnd="@dimen/detail_side_margin"
            style="@style/TextLabels" />

        <EditText
            android:id="@+id/et_equipment_edit_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_text_margin_left"
            tools:text="@string/equipment_brand_content"
            android:textColorHint="@drawable/hint_selector"
            android:layout_marginTop="@dimen/detail_text_margin_top"
            android:singleLine="true"
            android:theme="@style/EditTextStyleWhite"
            android:background="@drawable/text_box_underline_selector"
            style="@style/TextContents" />

        <!-- Equipment model label and text -->
        <TextView
            android:id="@+id/tv_equipment_model_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_model_label"
            android:layout_marginTop="@dimen/detail_label_text_margin_top"
            android:layout_marginEnd="@dimen/detail_side_margin"
            style="@style/TextLabels" />

        <EditText
            android:id="@+id/et_equipment_edit_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_text_margin_left"
            tools:text="@string/equipment_model_content"
            android:textColorHint="@drawable/hint_selector"
            android:singleLine="true"
            android:layout_marginTop="@dimen/detail_text_margin_top"
            android:theme="@style/EditTextStyleWhite"
            android:background="@drawable/text_box_underline_selector"
            style="@style/TextContents" />

        <!-- Equipment registration date label and text -->
        <TextView
            android:id="@+id/tv_equipment_registration_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_registration_date_label"
            android:labelFor="@+id/tv_equipment_edit_registration_date"
            android:layout_marginTop="@dimen/detail_label_text_margin_top"
            android:layout_marginEnd="@dimen/detail_side_margin"
            style="@style/TextLabels" />

        <TextView
            android:id="@+id/tv_equipment_edit_registration_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_text_margin_left"
            tools:text="@string/equipment_registration_date_content"
            android:enabled="false"
            android:layout_marginTop="@dimen/detail_text_margin_top"
            style="@style/TextContentsNotEditable" />

        <View
            android:id="@+id/view_equipment_edit_reg_date_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

        <!-- Equipment owner label and text -->
        <TextView
            android:id="@+id/tv_equipment_owner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_owner_label"
            android:labelFor="@+id/tv_equipment_edit_owner"
            android:layout_marginTop="@dimen/detail_label_text_margin_top"
            android:layout_marginEnd="@dimen/detail_side_margin"
            style="@style/TextLabels" />

        <TextView
            android:id="@+id/tv_equipment_edit_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/equipment_owner_content"
            android:layout_marginStart="@dimen/detail_text_margin_left"
            android:layout_marginTop="@dimen/detail_text_margin_top"
            style="@style/TextContentsNotEditable" />

        <View
            android:id="@+id/view_equipment_edit_owner_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />


        <!-- Equipment status label and text -->
        <TextView
            android:id="@+id/tv_equipment_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_status_label"
            android:labelFor="@+id/layout_equipment_status_details"
            android:layout_marginTop="@dimen/detail_label_text_margin_top"
            android:layout_marginEnd="@dimen/detail_side_margin"
            style="@style/TextLabels" />

        <LinearLayout
            android:id="@+id/layout_equipment_status_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- RadioGroup for visible selection of a priority -->
            <RadioGroup
                android:id="@+id/radioGroupEquipmentEditStatus"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/rb_equipment_edit_status_owned"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/detail_text_margin_left"
                    android:layout_marginTop="@dimen/detail_text_margin_top"
                    android:checked="true"
                    android:text="@string/option_equipment_status_owned"
                    android:buttonTint="@color/white_text_color"
                    style="@style/TextContents" />

                <RadioButton
                    android:id="@+id/rb_equipment_edit_status_sold"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/detail_text_margin_left"
                    android:layout_marginTop="@dimen/detail_text_margin_top"
                    android:text="@string/option_equipment_status_sold"
                    android:buttonTint="@color/white_text_color"
                    style="@style/TextContents" />

                <RadioButton
                    android:id="@+id/rb_equipment_edit_status_stolen"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/detail_text_margin_left"
                    android:layout_marginTop="@dimen/detail_text_margin_top"
                    android:text="@string/option_equipment_status_stolen"
                    android:buttonTint="@color/white_text_color"
                    style="@style/TextContents" />

            </RadioGroup>

        </LinearLayout>

        <!-- Profile Email which the equipment was sold to -->
        <LinearLayout
            android:id="@+id/ll_profile_email_sold_to"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_owner_cpf_label_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_detail_next_owner_email_label"
                    android:layout_marginTop="@dimen/detail_label_text_margin_top"
                    android:layout_marginEnd="@dimen/detail_side_margin"
                    style="@style/TextLabels" />

            </LinearLayout>

            <LinearLayout
                android:paddingTop="5dp"
                android:paddingBottom="3dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Owner Email label and text -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white_text_color"
                    android:layout_marginEnd="5dp">
                    <EditText
                        android:id="@+id/et_equipment_edit_owner_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="10dp"
                        android:textColorHint="@drawable/hint_selector"
                        tools:text="@string/owner_email_content"
                        android:layout_marginTop="@dimen/detail_text_margin_top"
                        style="@style/TextContents"
                        android:paddingBottom="2dp"
                        android:singleLine="true"
                        android:theme="@style/EditTextStyleWhite"
                        android:background="@drawable/text_box_underline_selector" />
                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:id="@+id/btn_equipment_profile_email_search"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/btn_email_search_equipment_edit"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:layout_marginStart="5dp"
                    android:foreground="?selectableItemBackground">

                    <ImageView
                        android:id="@+id/btnEmailSearchButtonImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:src="@drawable/email_search_icon"
                        android:layout_gravity="center"
                        android:textColor="@color/theme_primary_dark"/>

                    <TextView
                        android:id="@+id/emailSearchText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="9sp"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:textColor="@color/theme_primary_dark"/>

                    <ProgressBar
                        android:id="@+id/progressBar_equipment_edit_sold_to"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:indeterminateTint="@color/transparent"
                        android:visibility="invisible"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- Profile name which the equipment was sold to -->
        <LinearLayout
            android:id="@+id/ll_profile_name_sold_to"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_owner_name_label_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_sold_to_name"
                    android:layout_marginTop="@dimen/detail_label_text_margin_top"
                    android:layout_marginEnd="@dimen/detail_side_margin"
                    style="@style/TextLabels" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_equipment_edit_sold_to_owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/owner_name_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                style="@style/TextContentsNotEditable"
                android:theme="@style/EditTextStyleWhite"
                android:background="@drawable/text_box_underline_selector" />

        </LinearLayout>

        <!-- Equipment short detail label and text -->
        <TextView
            android:id="@+id/tv_equipment_short_detail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_short_description_label"
            android:layout_marginTop="@dimen/detail_label_text_margin_top"
            style="@style/TextLabels" />

        <EditText
            android:id="@+id/et_equipment_edit_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginStart="@dimen/detail_text_margin_left"
            android:maxLines="6"
            android:textColorHint="@drawable/hint_selector"
            tools:text="@string/equipment_short_description_content"
            style="@style/TextContents"
            android:theme="@style/EditTextStyleWhite"
            android:background="@drawable/text_box_underline_selector"
            android:ems="11"
            android:inputType="textMultiLine" />


    </LinearLayout>

</ScrollView>